--- a/MatchMaker.Core/MatchMaker.Core.csproj
+++ b/MatchMaker.Core/MatchMaker.Core.csproj
@@ -96,6 +96,9 @@
     <Compile Include="Model\sp_UserRegister_Result.cs">
       <DependentUpon>touchdb.tt</DependentUpon>
     </Compile>
+    <Compile Include="Model\sp_UserSelectById_Result.cs">
+      <DependentUpon>touchdb.tt</DependentUpon>
+    </Compile>
     <Compile Include="Model\sp_UserSelect_Result.cs">
       <DependentUpon>touchdb.tt</DependentUpon>
     </Compile>
