Se agrego sp para buscar al usuario por email. etc.

--- a/MatchMaker.Core/MatchMaker.Core.csproj
+++ b/MatchMaker.Core/MatchMaker.Core.csproj
@@ -117,6 +117,9 @@
     <Compile Include="Model\sp_UserRegister_Result.cs">
       <DependentUpon>touchdb.tt</DependentUpon>
     </Compile>
+    <Compile Include="Model\sp_UserSelectByEmail_Result.cs">
+      <DependentUpon>touchdb.tt</DependentUpon>
+    </Compile>
     <Compile Include="Model\sp_UserSelectById_Result.cs">
       <DependentUpon>touchdb.tt</DependentUpon>
     </Compile>
